third_party/move/tools/move-decompiler/tests/compiler-v2-test/more-v1/control_flow/for_loop_lparen_following.exp
script {
    entry fun <SELF>_0() {
        let _t0 = 0;
        let _t1 = false;
        loop {
            if (_t1) _t0 = _t0 + 1 else _t1 = true;
            if (_t0 < 10) continue;
            break
        };
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: unexpected token
  ┌─ for_loop_lparen_following.move:2:15
  │
2 │     entry fun <SELF>_0() {
  │               ^
  │               │
  │               Unexpected '<'
  │               Expected an identifier
